fix content padding on small screens

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -39,6 +39,9 @@ img
         flex: 1
         padding-top: 212px
 
+        @media (max-width: 768px)
+            padding-top: 170px
+
 .text-color
     color: $maincolor
 
